Adding a banner about Pyrefly to the website's home page

--- a/documentation/website/src/pages/styles.module.css
+++ b/documentation/website/src/pages/styles.module.css
@@ -108,3 +108,45 @@
     width: 98%;
   }
 }
+
+.topBannerContainer {
+  background-color: rgb(15, 15, 15);
+}
+
+.topBanner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.topBannerTitle {
+  font-size: 54px;
+  font-weight: bold;
+  margin-bottom: 0.4rem;
+  align-items: center;  
+  text-align:center;
+
+}
+
+@media only screen and (max-width: 768px) {
+  .topBannerTitle {
+    font-size: 40px;
+  }
+}
+
+.topBannerTitleText {
+  background: linear-gradient(
+    90deg,
+    rgb(131 58 180 / 100%) 0%,
+    rgb(253 29 29 / 100%) 50%,
+    rgb(252 176 69 / 100%) 100%
+  );
+  background-clip: text;
+  
+  -webkit-text-fill-color: transparent;
+}
+
+.topBannerTitleText:hover {
+  border-bottom: solid 2px;
+  border-color: rgb(152 0 255);
+}
